force-app/main/default/objects/Enquiry__c/fields/Campaign_Token__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Token__c</fullName>
    <label>Campaign Token</label>
    <length>80</length>
    <type>Text</type>
</CustomField>