force-app/main/default/objects/Enquiry__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Enquiries</relationshipLabel>
    <relationshipName>Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>