force-app/main/default/objects/Enquiry__c/fields/City_Id__c.field-meta.xml
<CustomField>
    <fullName>City_Id__c</fullName>
    <label>City Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>