force-app/main/default/objects/Enquiry__c/fields/Coming_From__c.field-meta.xml
<CustomField>
    <fullName>Coming_From__c</fullName>
    <label>Coming From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>website-contact_us</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>