force-app/main/default/objects/Enquiry__c/fields/Course_Id__c.field-meta.xml
<CustomField>
    <fullName>Course_Id__c</fullName>
    <label>Course Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>