force-app/main/default/objects/Enquiry__c/fields/GCL_Id__c.field-meta.xml
<CustomField>
    <fullName>GCL_Id__c</fullName>
    <label>GCL Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>