force-app/main/default/objects/Enquiry__c/fields/Interested_Webinar_ID__c.field-meta.xml
<CustomField>
    <fullName>Interested_Webinar_ID__c</fullName>
    <label>Interested Webinar ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>