force-app/main/default/objects/Enquiry__c/fields/Masked_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Masked_Phone_Number__c</fullName>
    <formula>IF( ISBLANK( Phone_Number__c ) , &quot;&quot;,  LEFT( Phone_Number__c , 1)&amp; &quot;XXXXXXXXX&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Number</label>
    <type>Text</type>
</CustomField>