force-app/main/default/objects/Enquiry__c/fields/Page_Full_URL__c.field-meta.xml
<CustomField>
    <fullName>Page_Full_URL__c</fullName>
    <label>Page Full URL</label>
    <type>Url</type>
</CustomField>