force-app/main/default/objects/Enquiry__c/fields/Register_for_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Register_for_Webinar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Register for Webinar</label>
    <type>Checkbox</type>
</CustomField>