force-app/main/default/objects/Enquiry__c/fields/SMS_Allow__c.field-meta.xml
<CustomField>
    <fullName>SMS_Allow__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SMS Allow</label>
    <type>Checkbox</type>
</CustomField>