force-app/main/default/objects/Enquiry__c/fields/Source_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Source_Bucket__c</fullName>
    <label>Source Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bucket 1</fullName>
            </value>
            <value>
                <fullName>Bucket 2</fullName>
            </value>
            <value>
                <fullName>Bucket 3</fullName>
            </value>
            <value>
                <fullName>Bucket 4</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>