force-app/main/default/objects/Enquiry__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enquiries</relationshipLabel>
    <relationshipName>Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>