force-app/main/default/objects/Enquiry__c/fields/URL_Page_Path__c.field-meta.xml
<CustomField>
    <fullName>URL_Page_Path__c</fullName>
    <label>URL Page Path</label>
    <type>TextArea</type>
</CustomField>