force-app/main/default/objects/Enquiry__c/fields/User_Track_ID__c.field-meta.xml
<CustomField>
    <fullName>User_Track_ID__c</fullName>
    <label>User Track ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>