force-app/main/default/objects/Enquiry__c/fields/WhatsApp_Allow__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Allow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WhatsApp Allow</label>
    <type>Checkbox</type>
</CustomField>