force-app/main/default/objects/Enquiry__c/fields/WhatsApp_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WhatsApp Opt-In</label>
    <type>Checkbox</type>
</CustomField>