force-app/main/default/objects/Enquiry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>City_Id__c</columns>
    <columns>First_Name__c</columns>
    <columns>Course__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>