force-app/main/default/objects/Enquiry__c/listViews/High_Priority_Bangalore_Enquiry.listView-meta.xml
<ListView>
    <fullName>High_Priority_Bangalore_Enquiry</fullName>
    <filterScope>Queue</filterScope>
    <label>Experienced Priority-Bangalore</label>
    <queue>High_Priority_Bangalore</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>