force-app/main/default/objects/Enquiry__c/listViews/Untracked_Enq.listView-meta.xml
<ListView>
    <fullName>Untracked_Enq</fullName>
    <columns>NAME</columns>
    <columns>Coming_From__c</columns>
    <columns>Course__c</columns>
    <columns>Primary_tag__c</columns>
    <columns>Stage__c</columns>
    <columns>City__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Untracked</value>
    </filters>
    <label>Untracked Enq</label>
</ListView>